playbooks/resources/kubernetes-dashboard/Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
spec:
  rules:
    - host: kubernetes-dashboard.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  kubernetes-dashboard
                port:
                  number: 443
